# nada-cli

./: Cargo.toml  README.md  dist-workspace.toml
scripts/: release.sh
src/: jita.rs  kubeconfig.rs  main.rs
