[package]
name = "nada-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive", "env"] }
google-cloud-gax = { version = "1.5.0", features = [] }
google-cloud-privilegedaccessmanager-v1 = { version = "1.4.0", features = [] }
google-cloud-wkt = { version = "1.2.0", features = ["time"] }
humantime = "2.3.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
